# TrashEngine

./: CMakeLists.txt
res/shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl  PhongFragmentShader.glsl  PhongVertexShader.glsl
src/: App.hpp  Input.hpp  Time.hpp  Vectors.hpp  Window.hpp  main.cpp
src/Core/: App.hpp  Window.hpp  main.cpp
src/Graphics/: LightSource.hpp  Material.hpp  Mesh.hpp  Shaders.hpp  Texture.hpp  Vertex.hpp
src/Graphics/Shaders/: FragmentShader.glsl  VertexShader.glsl
src/Math/: Camera.hpp  Matrices.hpp  MatrixTransformation.hpp  VectorTransformation.hpp  Vectors.hpp
src/Utils/: Input.hpp  RenderUtils.hpp  ResourceLoader.hpp  Shaders.hpp  Time.hpp
